<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainactivitiesblank"
    tools:context=".game">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/return_button"
        android:onClick="back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:src="@drawable/ic_baseline_arrow_back_24"
        tools:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/reset_game"
        android:onClick="retry"
        android:src="@drawable/ic_baseline_autorenew_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:src="@drawable/ic_baseline_autorenew_24"
        tools:srcCompat="@drawable/ic_baseline_autorenew_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="62dp"
        android:fontFamily="@font/primative_font"
        android:text="@string/temp_30s"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        tools:text="@string/temp_30s" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="363dp"
        android:layout_height="207dp"
        android:text="@string/temp_words_game"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <EditText
        android:id="@+id/userValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_here"
        android:importantForAutofill="no"
        android:inputType="none|textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

</androidx.constraintlayout.widget.ConstraintLayout>