<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/results"
    tools:context=".results">

    <TextView
        android:id="@+id/gameText"
        android:layout_width="315dp"
        android:layout_height="151dp"
        android:fontFamily="@font/primative_font"
        android:text="@string/yarr_you_typed_at"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="252dp"
        android:layout_height="120dp"
        android:fontFamily="@font/primative_font"
        android:text="@string/_50_wpm"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <ImageButton
        android:id="@+id/retry_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/retry_results"
        android:onClick="retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        app:srcCompat="@drawable/retrybutton__1_" />

    <ImageButton
        android:id="@+id/main_menu_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/main_menu_results"
        android:onClick="main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/retry_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        app:srcCompat="@drawable/mainmenubutton" />

</androidx.constraintlayout.widget.ConstraintLayout>